6.code-server/2.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: code-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dogring.ddns.net
    secretName: code-dogring-cert
  rules:
  - host: dogring.ddns.net
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 8080
