6.code-server/8.nana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nana-server
  namespace: code-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.authelia.svc.cluster.local:9091/api/verify"
    nginx.ingress.kubernetes.io/auth-response-headers: "Remote-User, Remote-Name, Remote-Email, Remote-Groups"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.dogring.kr/"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      'X-Real-IP $remote_addr'
      'X-Forwarded-For $proxy_add_x_forwarded_for'
      'X-Forwarded-Proto $scheme'
      'X-Forwarded-Host $host'
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nana.dogring.kr
    secretName: nana-dogring-cert
  rules:
  - host: nana.dogring.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nana-server
            port:
              number: 8080
